
syntax = "proto3";
 
 option go_package = "github.com/franklynobleC/eventstreamTask/service"; 

package evenstore;

service EventStore {
    
      rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse){}
    // Get all events for the given aggregate and event
     rpc GetEvents(GetEventsRequest) returns (GetEventResponse) {}
  //    Get stream of events for the given event
  //  rpc GetEventsStream(GetEventsRequest) returns (stream Event) {}
  }
  
  message Event {
    string event_id = 1;
    string event_type = 2;
    string aggregate_type = 4;
    string event_data = 5 ;
  }
 
    message CreateEventRequest {
      Event event = 1;
    }
  
  message GetEventResponse {
    Event event = 1;
  }

  message CreateEventResponse{
     bool is_Success = 1; 
     string error = 2;
  }
  
  message GetEventsRequest {
    string event_id = 1;
    string aggregate_id = 2;
  }
  
   